[tool.black]
line-length = 110
target-version = ['py37', 'py38', 'py39', 'py310']
include = '(app|tests)/.*\.pyi?$'

[tool.poetry]
name = "retirement"
version = "0.1.0"
description = "Monte Carlo retirement simulator with guardrails"
authors = ["Steve Astels"]
license = "MIT license"
readme = "README.md"
packages = []

[build-system]
requires = ["poetry>=1.3.2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "~3.10"

python-dotenv = "0.21.0"
python-magic = "0.4.27"

[tool.poetry.group.test.dependencies]
black = "23.3.0"
flake8 = "6.0.0"
freezegun = "1.2.2"
mypy = "1.0.1"

pytest = "7.2.0"
pytest-env = "0.8.1"
pytest-mock = "3.10.0"
pytest-cov = "3.0.0"

coveralls = "1.11.1"
